fix: style spacing and sizing

--- a/src/components/Comments/CommentActions/CommentActions.module.scss
+++ b/src/components/Comments/CommentActions/CommentActions.module.scss
@@ -1,15 +1,17 @@
 @import 'styles/base';
 
 .actions {
-	display: flex;
-	align-items: center;
-	gap: 2.4rem;
+    display: flex;
+    align-items: center;
+    gap: 2.4rem;
 
-	grid-row: 1;
-	grid-column: 3/-1;
+    font-size: 1.6rem;
 
-	@include mobile {
-		grid-row: 3;
-		margin-left: auto;
-	}
+    grid-row: 1;
+    grid-column: 3/-1;
+
+    @include mobile {
+        grid-row: 3;
+        margin-left: auto;
+    }
 }
