--- a/src/components/Comments/CommentHeader/CommentHeader.module.scss
+++ b/src/components/Comments/CommentHeader/CommentHeader.module.scss
@@ -1,35 +1,35 @@
 @import 'styles/base';
 
 .header {
-	display: flex;
-	align-items: center;
-	gap: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
 
-	@include mobile {
-		grid-column: 1/-1;
-	}
+    @include mobile {
+        grid-column: 1/-1;
+    }
 
-	img {
-		width: 4rem;
-	}
+    img {
+        width: 3.6rem;
+    }
 }
 
 .usernameWrapper {
-	display: flex;
-	align-items: center;
-	gap: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 
-	.username {
-		color: $darkBlue;
-		font-weight: 600;
-	}
+    .username {
+        color: $darkBlue;
+        font-weight: 600;
+    }
 
-	.badge {
-		font-size: 1.6rem;
-		color: $white;
+    .badge {
+        font-size: 1.6rem;
+        color: $white;
 
-		background-color: $moderateBlue;
-		border-radius: 4px;
-		padding: 0.3rem 1rem;
-	}
+        background-color: $moderateBlue;
+        border-radius: 4px;
+        padding: 0.3rem 1rem;
+    }
 }
